--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "redeploy": "npm run build",
+    "deploy": "gh pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
